--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -33,6 +33,7 @@
             input,textarea {
                 background-color: $black;
                 border: none;
+                border-radius: 0px;
                 border-bottom: 4px solid $agua;
                 color: $light;
                 display: block;
