--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ h1 {
     color: #FCF4DA;
     font-family: 'DM Serif Text', serif;
     font-size: 3.5rem;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.2px;
     line-height: 3.5rem; }
 
 h2 {
@@ -460,7 +460,8 @@ button {
 button:hover {
   background: #F5DA4C;
   border-bottom: 4px solid #F5A623;
-  transition: 0.5s; }
+  transition: 0.5s;
+  cursor: pointer; }
 
 /* =============
     Forms
@@ -497,19 +498,19 @@ a:link {
   #off-canvas-container button {
     background-color: transparent;
     border: none;
-    outline: none;
     color: #D5F8FF;
     cursor: pointer;
     font-size: 1.5625rem;
     margin-bottom: 20px;
+    outline: none;
     text-align: right;
     transition: 0.25s;
     width: 100%; }
     #off-canvas-container button :hover, #off-canvas-container button :active {
-      border: none;
-      outline: none;
       background: transparent;
-      color: #F5A623; }
+      border: none;
+      color: #F5A623;
+      outline: none; }
     #off-canvas-container button i {
       color: #D5F8FF; }
   #off-canvas-container ul li {
@@ -524,6 +525,9 @@ a:link {
     margin-bottom: 20px; }
     #off-canvas-container ul li :hover {
       color: #F5A623; }
+    #off-canvas-container ul li i {
+      color: #4BC1B4;
+      width: 24px; }
     #off-canvas-container ul li a:link,
     #off-canvas-container ul li a:visited {
       color: #fff; }
@@ -532,17 +536,17 @@ a:link {
       color: #F5A623; }
 
 #logo {
-  position: fixed;
   left: 16px;
+  position: fixed;
   top: 16px; }
   #logo img {
     height: 40px; }
 
 #burger-icon {
   border: none;
-  outline: none;
-  font-size: 1.375rem;
   color: #000;
+  font-size: 1.375rem;
+  outline: none;
   position: fixed;
   right: 16px;
   top: 16px;
@@ -550,8 +554,8 @@ a:link {
   #burger-icon :hover, #burger-icon :active {
     background: #F5A623;
     border-bottom: 4px solid #F5DA4C;
-    padding: 8px 12px 6px 12px;
-    color: #fff; }
+    color: #fff;
+    padding: 8px 12px 6px 12px; }
   #burger-icon i {
     background: #D5F8FF;
     border-bottom: 4px solid #4BC1B4;
@@ -593,7 +597,7 @@ footer {
   width: 100%;
   background-repeat: no-repeat;
   background-position: center;
-  background: #FCF4DA;
+  background: #4A4A4A;
   display: grid;
   grid-template-areas: ". footer .";
   grid-template-columns: 10% 80% 10%; }
@@ -606,7 +610,7 @@ footer {
   footer div {
     grid-area: footer; }
     footer div h1 {
-      color: #000;
+      color: #FCF4DA;
       font-family: 'DM Serif Text', serif;
       font-size: 2rem;
       line-height: 2.5rem;
@@ -616,10 +620,10 @@ footer {
       display: flex;
       justify-content: center; }
       footer div ul li {
-        padding: 16px 16px; }
+        padding: 16px 12px; }
         footer div ul li a:link,
         footer div ul li a:visited {
-          color: #000;
+          color: #F5DA4C;
           font-size: 2.5rem; }
         footer div ul li a:active,
         footer div ul li a:hover {
@@ -692,6 +696,7 @@ footer {
       #contact > div form input, #contact > div form textarea {
         background-color: #000;
         border: none;
+        border-radius: 0px;
         border-bottom: 4px solid #4BC1B4;
         color: #D5F8FF;
         display: block;
@@ -770,10 +775,11 @@ footer {
 #faq {
   padding: 40px 16px 80px 16px;
   display: grid;
+  grid-gap: 0;
   grid-template-areas: "faq ." "questions questions" "faqimg faqimg";
-  grid-template-rows: repeat(2, auto);
   grid-template-columns: 70% 30%;
-  grid-gap: 0; }
+  grid-template-rows: repeat(2, auto);
+  padding-bottom: 0px; }
   @media (min-width: 968px) {
     #faq {
       padding: 80px 24px 160px 24px; } }
@@ -821,6 +827,7 @@ footer {
       text-decoration-color: #4BC1B4; }
       #faq > div:nth-child(2) a:hover {
         color: #F5A623;
+        cursor: pointer;
         text-decoration: underline;
         text-decoration-color: #F5A623; }
     #faq > div:nth-child(2) div {
@@ -890,9 +897,9 @@ footer {
             width: 40px; } }
   #faq > div:nth-child(3) {
     background-image: url("../img/faq/green-hill.svg");
+    background-position: center right;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center right;
     display: flex;
     height: 457px;
     width: 100%; }
@@ -901,7 +908,9 @@ footer {
     Friends
 ============= */
 #friends {
-  padding: 40px 16px 80px 16px; }
+  padding: 40px 16px 80px 16px;
+  max-width: 1000px;
+  margin: 0 auto; }
   @media (min-width: 968px) {
     #friends {
       padding: 80px 24px 160px 24px; } }
@@ -940,8 +949,6 @@ footer {
     @media (min-width: 968px) {
       #friends .friend-card {
         padding: 40px 32px; } }
-    #friends .friend-card :hover {
-      box-shadow: 0 7px 24px 2px rgba(206, 206, 206, 0.6); }
     #friends .friend-card h3 {
       padding: 8px 24px;
       letter-spacing: 1px; }
@@ -1048,13 +1055,13 @@ footer {
 ============= */
 #hero {
   display: grid;
-  grid-template-areas: "video" "herotext";
+  grid-template-areas: "heroimg" "herotext";
   grid-template-columns: repeat(1, auto);
-  grid-template-rows: auto 300px;
+  grid-template-rows: 300px auto;
   margin: 0 auto; }
   @media (min-width: 700px) {
     #hero {
-      grid-template-areas: "herotext video";
+      grid-template-areas: "herotext heroimg";
       grid-template-columns: 40% auto;
       grid-template-rows: repeat(1, auto); } }
   @media (min-width: 968px) {
@@ -1062,12 +1069,14 @@ footer {
       grid-template-columns: 30% auto;
       grid-template-rows: repeat(1, auto); } }
   #hero > div:nth-child(1) {
+    background-image: url("../img/hero/hero.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
-    grid-area: video;
-    height: 50vh;
-    width: 100vw;
-    margin: 0;
-    object-fit: fill; }
+    grid-area: heroimg;
+    width: 100%;
+    margin: 0 auto; }
     @media (min-width: 498px) {
       #hero > div:nth-child(1) {
         height: 340px; } }
@@ -1080,9 +1089,6 @@ footer {
     @media (min-width: 1210px) {
       #hero > div:nth-child(1) {
         height: 800px; } }
-    #hero > div:nth-child(1) video {
-      width: 100%;
-      height: 100%; }
   #hero > div:nth-child(2) {
     align-items: center;
     display: flex;
@@ -1098,6 +1104,45 @@ footer {
     @media (min-width: 1210px) {
       #hero > div:nth-child(2) {
         padding: 0 48px; } }
+  #hero section {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 180px; }
+    #hero section a:link,
+    #hero section a:visited {
+      align-items: center;
+      border: 3px solid #fff;
+      border-radius: 100px;
+      color: #fff;
+      display: inline-block;
+      display: flex;
+      height: 78px;
+      justify-content: center;
+      width: 78px; }
+      @media (min-width: 498px) {
+        #hero section a:link,
+        #hero section a:visited {
+          font-size: 1.125rem;
+          height: 90px;
+          width: 90px; } }
+      @media (min-width: 700px) {
+        #hero section a:link,
+        #hero section a:visited {
+          border: 4px solid #fff;
+          font-size: 1.4375rem;
+          height: 120px;
+          width: 120px; } }
+      @media (min-width: 968px) {
+        #hero section a:link,
+        #hero section a:visited {
+          border: 5px solid #fff;
+          font-size: 2rem;
+          height: 170px;
+          width: 170px; } }
+    #hero section a:active,
+    #hero section a:hover {
+      background-color: #D5F8FF;
+      color: #F5A623; }
 
 /* =============
     Hills
@@ -1181,7 +1226,7 @@ footer {
   #plan > div {
     display: grid;
     grid-template-areas: "plantop" "hike" "bike" "run";
-    grid-template-rows: repeat(3, auto); }
+    grid-template-rows: 160px auto auto; }
     @media (min-width: 700px) {
       #plan > div {
         grid-template-areas: ". plantop . ." ". hike . ." ". hike run ." ". bike run ." ". bike . .";
@@ -1191,7 +1236,8 @@ footer {
       #plan > div {
         grid-template-areas: ". bike" "plantop bike" "hike bike" "hike run" ". run";
         grid-template-columns: 50% 50%;
-        grid-gap: 0px; } }
+        grid-gap: 0px 16px;
+        margin: 0 auto; } }
     @media (min-width: 1210px) {
       #plan > div {
         grid-template-areas: ". hike plantop bike ." ". hike run bike .";
@@ -1347,6 +1393,24 @@ footer {
     border-left: 8px solid #F5DA4C; }
     #trail > div:nth-child(5) span {
       background-color: #F5DA4C; }
+
+/* =============
+    Video
+============= */
+.video-wrapper {
+  position: relative;
+  height: 0; }
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.widescreen {
+  padding-bottom: 56.25%;
+  /* 16:9 */ }
 
 /* =============
     Visit
