--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -30,19 +30,19 @@ a:link {
     button {
         background-color: transparent;
         border: none;
-        outline: none;
         color: $light;
         cursor: pointer;
         font-size: rem-calc(25);
         margin-bottom: 20px;
+        outline: none;
         text-align: right;
         transition: 0.25s;
         width: 100%;
         :hover, :active{
-            border: none;
-            outline: none;
             background: transparent;
+            border: none;
             color: $orange;
+            outline: none;
         }
         i{
             color: $light;
@@ -55,6 +55,10 @@ a:link {
         li {
             @include link-style;
             margin-bottom: 20px;
+            i{
+                color: $agua;
+                width: 24px;
+            }
             a:link,
             a:visited {
                 color: $white;
@@ -69,8 +73,8 @@ a:link {
 }
 
 #logo{
-    position: fixed;
     left: 16px;
+    position: fixed;
     top: 16px;
     img{
         height: 40px;
@@ -79,9 +83,9 @@ a:link {
 
 #burger-icon {
     border: none;
-    outline: none;
-    font-size: rem-calc(22);
     color: $black;
+    font-size: rem-calc(22);
+    outline: none;
     position: fixed;
     right: 16px;
     top: 16px;
@@ -89,8 +93,8 @@ a:link {
     :hover, :active{
         background: $orange;
         border-bottom: 4px solid $sun;
-        padding: 8px 12px 6px 12px;
         color: $white;
+        padding: 8px 12px 6px 12px;
     }
     i{
         background: $light;
