--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -8,7 +8,7 @@ footer{
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    background: $off-white;
+    background: $midnight;
 
     display: grid;
     grid-template-areas:
@@ -27,7 +27,7 @@ footer{
     div{
         grid-area: footer;
         h1{
-            color: $black;
+            color: $off-white;
             // text-decoration: underline;
             // text-decoration-color: $agua;
             font-family: 'DM Serif Text', serif;
@@ -42,11 +42,11 @@ footer{
             justify-content: center;
 
             li {
-                padding: 16px 16px;
+                padding: 16px 12px;
 
                 a:link,
                 a:visited {
-                    color: $black;
+                    color: $sun;
                     font-size: rem-calc(40);
                 }
 
