--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -32,4 +32,5 @@
 @import "sections/_hills";
 @import "sections/_plan";
 @import "sections/_trail";
+@import "sections/_video";
 @import "sections/_visit";
