--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,16 +2,43 @@
     Header
 ============= */
 
-header{
-    background-color: $off-white;
-    height: 72px;
-    width: 100%;
-    position: fixed;
-    z-index: 100;
-    display: flex;
-    justify-content: flex-end;
-    >div{
-        padding: 16px;
-    }
+header {
+   display: grid;
+   grid-template-areas: "burger logo" "nav nav";
+   grid-template-columns: auto 70%;
+   @include lg {
+       grid-template-areas: "nav logo";
+       grid-template-columns: auto 30%;
+   }
+   // burger container
+   section:nth-child(1) {
+       align-items: center;
+       display: flex;
+       grid-area: burger;
+       padding: 10px;
+       @include lg {
+           display: none;
+       }
 
+       button {
+           background-color: $white;
+           border: none;
+           outline: none;
+       }
+   }
+   // logo container
+   section:nth-child(2) {
+       display: flex;
+       grid-area: logo;
+       justify-content: flex-end;
+       padding: 10px;
+   }
+   // nav container
+   nav {
+       display: none;
+       grid-area: nav;
+       @include lg {
+           display: block !important;
+       }
+   }
 }
