--- a/css/styles.css
+++ b/css/styles.css
@@ -489,31 +489,18 @@ a:link {
   text-decoration: none;
   transition: 0.2s; }
 
-#off-canvas-container {
-  /* -------------
-        Here are the properties you can changes for the off-canvas navigation-slide
-    ------------- */
-  background-color: #4A4A4A;
-  /* close btn */ }
-  #off-canvas-container button {
-    background-color: transparent;
-    border: none;
-    color: #D5F8FF;
-    cursor: pointer;
-    font-size: 1.5625rem;
-    margin-bottom: 20px;
-    outline: none;
-    text-align: right;
-    transition: 0.25s;
-    width: 100%; }
-    #off-canvas-container button :hover, #off-canvas-container button :active {
-      background: transparent;
-      border: none;
-      color: #F5A623;
-      outline: none; }
-    #off-canvas-container button i {
-      color: #D5F8FF; }
-  #off-canvas-container ul li {
+nav {
+  background-color: #000;
+  padding: 10px; }
+  @media (min-width: 968px) {
+    nav {
+      background-color: #fff; } }
+  @media (min-width: 968px) {
+    nav ul {
+      align-items: center;
+      display: flex;
+      height: 100%; } }
+  nav ul li {
     border: none;
     outline: none;
     border-bottom: 4px solid #4BC1B4;
@@ -522,44 +509,29 @@ a:link {
     font-size: 1rem;
     letter-spacing: 0.09375rem;
     line-height: 1.5rem;
-    margin-bottom: 20px; }
-    #off-canvas-container ul li :hover {
+    margin-bottom: 20px;
+    margin-bottom: 15px; }
+    nav ul li :hover {
       color: #F5A623; }
-    #off-canvas-container ul li i {
+    nav ul li i {
       color: #4BC1B4;
       width: 24px; }
-    #off-canvas-container ul li a:link,
-    #off-canvas-container ul li a:visited {
+    @media (min-width: 968px) {
+      nav ul li {
+        margin-bottom: 0;
+        margin-left: 20px; } }
+    nav ul li a:link,
+    nav ul li a:visited {
       color: #fff; }
-    #off-canvas-container ul li a:active,
-    #off-canvas-container ul li a:hover {
-      color: #F5A623; }
-
-#logo {
-  left: 16px;
-  position: fixed;
-  top: 16px; }
-  #logo img {
-    height: 40px; }
-
-#burger-icon {
-  border: none;
-  color: #000;
-  font-size: 1.375rem;
-  outline: none;
-  position: fixed;
-  right: 16px;
-  top: 16px;
-  z-index: 100; }
-  #burger-icon :hover, #burger-icon :active {
-    background: #F5A623;
-    border-bottom: 4px solid #F5DA4C;
-    color: #fff;
-    padding: 8px 12px 6px 12px; }
-  #burger-icon i {
-    background: #D5F8FF;
-    border-bottom: 4px solid #4BC1B4;
-    padding: 8px 12px 6px 12px; }
+      @media (min-width: 968px) {
+        nav ul li a:link,
+        nav ul li a:visited {
+          color: #000; } }
+      nav ul li a:link a:active,
+      nav ul li a:link a:hover,
+      nav ul li a:visited a:active,
+      nav ul li a:visited a:hover {
+        color: #F5A623; }
 
 /* =============
     Thanks
@@ -578,15 +550,36 @@ a:link {
     Header
 ============= */
 header {
-  background-color: #FCF4DA;
-  height: 72px;
-  width: 100%;
-  position: fixed;
-  z-index: 100;
-  display: flex;
-  justify-content: flex-end; }
-  header > div {
-    padding: 16px; }
+  display: grid;
+  grid-template-areas: "burger logo" "nav nav";
+  grid-template-columns: auto 70%; }
+  @media (min-width: 968px) {
+    header {
+      grid-template-areas: "nav logo";
+      grid-template-columns: auto 30%; } }
+  header section:nth-child(1) {
+    align-items: center;
+    display: flex;
+    grid-area: burger;
+    padding: 10px; }
+    @media (min-width: 968px) {
+      header section:nth-child(1) {
+        display: none; } }
+    header section:nth-child(1) button {
+      background-color: #fff;
+      border: none;
+      outline: none; }
+  header section:nth-child(2) {
+    display: flex;
+    grid-area: logo;
+    justify-content: flex-end;
+    padding: 10px; }
+  header nav {
+    display: none;
+    grid-area: nav; }
+    @media (min-width: 968px) {
+      header nav {
+        display: block !important; } }
 
 /* =============
     Footer
